<resources>
    <string name="app_name">Fast Contact Share</string>
    <string name="content_authority" translatable="false">com.fabianbleile.fordigitalimmigrants</string>

    <string name="title_settings">Settings</string>
    <string name="title_send">Send</string>
    <string name="title_receive">Receive</string>

    /*fragment send screen*/
    <string name="label_bt_ready">Ready!</string>
    <string name="et_send_message">Type some kind words in here ... </string>
    <string name="ctv_name" translatable="false">Name</string>
    <string name="ctv_birthday" translatable="false">Birthday</string>
    <string name="ctv_phone_number" translatable="false">Phone Number</string>
    <string name="ctv_email" translatable="false">E-Mail</string>
    <string name="ctv_instagram" translatable="false">Instagram</string>
    <string name="ctv_facebook" translatable="false">Facebook</string>
    <string name="ctv_snapchat" translatable="false">Snapchat</string>
    <string name="ctv_hometown" translatable="false">Hometown</string>
    <string name="ctv_currentLocation" translatable="false">Location</string>
    <string name="ctv_twitter" translatable="false">Twitter</string>
    <string name="ctv_message" translatable="false">Message</string>

    /*fragment settings screen*/
    <string name="tv_fist_name">First Name</string>
    <string name="tv_last_name">Last Name</string>
    <string name="tv_phone_number">Phone Number</string>
    <string name="tv_email_adress">E-Mail</string>

    /*Alert dialog*/
    <string name="bt_ok" translatable="false">OK</string>
    <string name="bt_cncl" translatable="false">CANCEL</string>
    <string name="et_insert_info">Insert here</string>
    <string name="message_delete_info">Delete</string>

    /*Error Messages*/
    <string name="error_noValueDefined">No information given for </string>
    <string name="error_couldNotPutJsonObject" translatable="false">Could not put JsonObject</string>

    /*Toast Messages*/
    <string name="yes">YES</string>
    <string name="action_pressSend">Click the SEND-Button.</string>
    <string name="action_addedToClipboard"> added to clipboard</string>
    <string name="info_wrongDateFormat">Expected date format: dd.MM.yyyy</string>
    <string name="info_notPossibleToExecuteIntent">Open the app manually and paste the information from the clipboard.</string>
    <string name="question_setDefaultFile">Set last file as default file for a even faster access from widget?</string>

    /*Gson*//*Gson*/
    <string name="id_name" translatable="false">name</string>
    <string name="id_birthday" translatable="false">birthday</string>
    <string name="id_phone_number" translatable="false">phonenumber</string>
    <string name="id_email" translatable="false">email</string>
    <string name="id_instagram" translatable="false">instagram</string>
    <string name="id_facebook" translatable="false">facebook</string>
    <string name="id_snapchat" translatable="false">snapchat</string>
    <string name="id_hometown" translatable="false">hometown</string>
    <string name="id_currentLocation" translatable="false">location</string>
    <string name="id_twitter" translatable="false">twitter</string>


    /*Detail Activity*/
    <string name="title_activity_detail" translatable="false">DetailActivity</string>
    <string name="menu_item_save_to_contacts">Save to contacts</string>
    <string name="menu_item_switch_edit_mode">Edit</string>
    <string name="action_calender_title">Birthday </string>

    /*Widget*/
    <string name="appwidget_text">Last received contact</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_ad_mob" translatable="false">AdMobActivity</string>

    <string name="action_settings" translatable="false">Settings</string>

    /*AdMob*/
    <string name="interstitial_loading_tv">Ad is loading &#8230; </string>
    <string name="TEST_AD_UNIT_ID" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="TEST_ADMOB_APP_ID" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="MY_ADMOB_APP_ID" translatable="false">ca-app-pub-6856957073988410~7948042904</string>
    <string name="MY_AD_UNIT_ID" translatable="false">ca-app-pub-6856957073988410/9779999321</string>
    <string name="label_bt_send">send</string>
    <string name="tv_send_message">Insert here some kind words to send ...</string>

    /*Database*/
    <string name="database_name" translatable="false">nfc_contacts_database</string>

    /**/
    <string name="selectedContact" translatable="false">selectedContact</string>
    <string name="bundle" translatable="false">bundle</string>
    <string name="implementInterface" translatable="false"> must implement Interface</string>
    <string name="addTestDevice" translatable="false">CC5F2C72DF2B356BBF0DA198</string>
    <string name="saveContactToContacts" translatable="false">Save contact to contacts</string>
    <string name="comfacebookkatana" translatable="false">com.facebook.katana</string>
    <string name="cominstagramandroid" translatable="false">com.instagram.android</string>
    <string name="mailto" translatable="false">mailto:</string>
    <string name="dateFromPattern" translatable="false">dd.MM.yyyy</string>
    <string name="httpsScheme" translatable="false">https</string>
    <string name="facebookWebsite" translatable="false">www.facebook.com</string>
    <string name="instagramWebsite" translatable="false">www.instagram.com</string>
    <string name="twitterWebsite" translatable="false">twitter.com</string>
    <string name="search" translatable="false">search</string>
    <string name="str" translatable="false">str</string>
    <string name="keywords_search" translatable="false">keywords_search</string>
    <string name="defaultContactString" translatable="false">defaultContactString</string>
    <string name="Location" translatable="false">Location</string>
    <string name="mimetype" translatable="false">application/vnd.com.fabianbleile.fordigitalimmigrants</string>
</resources>
