<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:text="@string/configure" />

    <EditText
        android:id="@+id/appwidget_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:paddingTop="8dp"
        android:inputType="text" />

    <android.support.v4.widget.NestedScrollView

        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdgeLength="32dp"
        android:fillViewport="true"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:id="@+id/ctv_name_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_name"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ctv_phone_number_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_phone_number"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ctv_email_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_email"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ctv_birthday_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_birthday"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ctv_hometown_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_hometown"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ctv_instagram_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_instagram"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ctv_facebook_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_facebook"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ctv_snapchat_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_snapchat"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ctv_twitter_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_twitter"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ctv_currentLocation_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_currentLocation"
                android:textSize="18sp" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|end"
        android:layout_marginTop="8dp"
        android:text="@string/add_widget" />

</LinearLayout>