<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".Fragment.SendScreenFragment">

    <android.support.v4.widget.NestedScrollView

        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:fadingEdgeLength="32dp"
        android:fillViewport="true"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bt_ready"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:id="@+id/ctv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_name"
                android:textSize="18sp"
                android:contentDescription="@string/ctv_name"/>

            <Switch
                android:id="@+id/ctv_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_phone_number"
                android:textSize="18sp"
                android:contentDescription="@string/ctv_phone_number"/>

            <Switch
                android:id="@+id/ctv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_email"
                android:textSize="18sp"
                android:contentDescription="@string/ctv_email"/>

            <Switch
                android:id="@+id/ctv_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_birthday"
                android:textSize="18sp"
                android:contentDescription="@string/ctv_birthday"/>

            <Switch
                android:id="@+id/ctv_hometown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_hometown"
                android:textSize="18sp"
                android:contentDescription="@string/ctv_hometown"/>

            <Switch
                android:id="@+id/ctv_instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_instagram"
                android:textSize="18sp"
                android:contentDescription="@string/ctv_instagram"/>

            <Switch
                android:id="@+id/ctv_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_facebook"
                android:textSize="18sp"
                android:contentDescription="@string/ctv_facebook"/>

            <Switch
                android:id="@+id/ctv_snapchat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_snapchat"
                android:textSize="18sp"
                android:contentDescription="@string/ctv_snapchat"/>

            <Switch
                android:id="@+id/ctv_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_twitter"
                android:textSize="18sp"
                android:contentDescription="@string/ctv_twitter"/>

            <Switch
                android:id="@+id/ctv_currentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="32dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:text="@string/ctv_currentLocation"
                android:textSize="18sp"
                android:contentDescription="@string/ctv_currentLocation"/>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/bt_ready"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/ic_circle_primary"
        android:text="@string/label_bt_ready"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/action_pressSend"/>

</android.support.constraint.ConstraintLayout>